feat: add v1 tags endpoints